# RISC-y-Business

./: .gitignore  CMakeLists.txt  LICENSE  README.md  members.txt  run
include/: bit.c  bit.h
include/bit/: bit.c  bit.h
include/logger/: logger.c  logger.h
include/utility/: animationUtilities.cpp  animationUtilities.h  guiUtilities.cpp  guiUtilities.h  menuUtilities.cpp  menuUtilities.h  mouseUtilities.cpp  mouseUtilities.h  scrollTest  scrollTest.cpp  sfmlTest6  soundUtilities.cpp  soundUtilities.h  test  test.cpp  test2  testRun.cpp  testfile.txt  textEditorUtilities.cpp  textEditorUtilities.h  textfile.txt
src/assembler/: instructions  instructions.c  instructions.cpp  instructions.h  test  text.txt
src/gui/: main.cpp  startScreen.cpp  startScreen.h  test.cpp  test5
src/gui/dialogBox/: dialogBox.cpp  dialogBox.h
src/gui/dialogBoxes/: dialogBox.h
src/gui/editor/: editor  editor.cpp  editor.h  test  test.cpp
src/gui/include/: landingPage.h
src/gui/loadingScreen/: loadingScreen.cpp  loadingScreen.h
src/gui/src/: landingPage.cpp
src/gui/startScreen/: startScreen.cpp  startScreen.h
src/instruction/: aviInstr.cpp  instructions.cpp  instructions.h
src/memory/: memory.c  memory.h
src/register/: registers.c  registers.h
src/simulator/: CMakeLists.txt  simulator.c  simulator.h  simulatorCLI.c  test.txt
src/simulator/instructionExecutor/BTypeExecutor/: BTypeExecutor.h
src/simulator/instructionExecutor/ITypeExecutor/: ITypeExecutor.h
src/simulator/instructionExecutor/JTypeExecutor/: JTypeExecutor.h
src/simulator/instructionExecutor/RTypeExecutor/: RTypeExecutor.h
src/simulator/instructionExecutor/STypeExecutor/: STypeExecutor.h
src/simulator/instructionExecutor/UTypeExecutor/: UTypeExecutor.h
src/simulator/instructionExecutor/executorManager/: executorManager.c  executorManager.h
src/simulator/instructionExecutor/executors/BTypeExecutor/: BTypeExecutor.c  BTypeExecutor.h
src/simulator/instructionExecutor/executors/IOTypeExecutor/: IOTypeExecutor.c  IOTypeExecutor.h
src/simulator/instructionExecutor/executors/ITypeExecutor/: ITypeExecutor.c  ITypeExecutor.h
src/simulator/instructionExecutor/executors/JTypeExecutor/: JTypeExecutor.c  JTypeExecutor.h
src/simulator/instructionExecutor/executors/RTypeExecutor/: RTypeExecutor.c  RTypeExecutor.h
src/simulator/instructionExecutor/executors/STypeExecutor/: STypeExecutor.c  STypeExecutor.h
src/simulator/instructionExecutor/executors/UTypeExecutor/: UTypeExecutor.c  UTypeExecutor.h
src/simulator/memory/: memory.c  memory.h
src/simulator/register/: registers.c  registers.h
tests/bitTesting/: test0  test1  test2  test3  testing_0.c  testing_1.c  testing_2.c  testing_3.c
tests/guiTesting/: sfmlTest  sfmlTest1  sfmlTest11  sfmlTest3  sfmlTest4  sfmlTest5  sfmlTest6  sfmlTest7  sfmlTest8  sfmlTest9  test0  test1  test2  test3  test4  test5  test6
tests/memoryTesting/: test0  test1  testing_0.c  testing_1.c
tests/registerTesting/: test0  test1  test2  test3  testing_0.c  testing_1.c  testing_2.c  testing_3.c
tests/simulatorTesting/: test0  test1  test2  testFile.txt  testing_0.c  testing_1.c  testing_2.c
